# renovate-playground-git

./: LICENSE  MODULE.bazel  WORKSPACE  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  renovate.json5
.github/renovate/: package.json  pnpm-lock.yaml  renovate-0.0.0-semantic-release.tgz
.github/workflows/: assistant-to-the-branch-manager.yml  renovate.yml
renovate-preset/: default.json  default.json5  default2.json5
sub/: package.json
sub/latest-versions/: package.json
