"""Rules/toolchains for angular with Bazel."""

module(
    name = "angular-cli",
)
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_angular")
git_override(
    module_name = "rules_angular",
    commit = "17eac47ea99057f7473a7d93292e76327c894ed9",
    remote = "https://github.com/devversion/rules_angular.git",
)

bazel_dep(name = "devinfra")
git_override(
    module_name = "devinfra",
    commit = "2b0a3018401da50c0b34a4dedde2a6fdb9e90394",
    remote = "https://github.com/angular/dev-infra.git",
)
